--- a/app/src/main/res/layout/fragment_login_page.xml
+++ b/app/src/main/res/layout/fragment_login_page.xml
@@ -1,15 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/onboardingBGwithTint"
+
     tools:context=".loginPage">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
-        android:background="@drawable/onboardingBG"/>
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/LoginTitle"
+        android:layout_width="247dp"
+        android:layout_height="67dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="72dp"
+        android:layout_marginLeft="68dp"
+        android:layout_marginTop="265dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="50dp"
+        android:fontFamily="@font/poppins_semibold"
+        android:gravity="center_horizontal|top"
+        android:text="Bit by Bit"
+        android:textAlignment="center"
+        android:textFontWeight="400"
+        android:textSize="56dp" />
+
+    <TextView
+        android:id="@+id/LoginText"
+        android:layout_width="250dp"
+        android:layout_height="22dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="72dp"
+        android:layout_marginTop="339dp"
+        android:fontFamily="@font/poppins"
+        android:gravity="center_horizontal|top"
+        android:text="User Login"
+        android:textAlignment="center"
+        android:textFontWeight="400"
+        android:textSize="20dp"
+
+
+        />
+
+</RelativeLayout>
