--- a/app/src/main/res/layout/fragment_login_page.xml
+++ b/app/src/main/res/layout/fragment_login_page.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,64 +27,98 @@
         android:text="Bit by Bit"
         android:textAlignment="center"
         android:textFontWeight="400"
-        android:textSize="56dp" />
+        android:textSize="56sp" />
 
     <TextView
         android:id="@+id/LoginText"
         android:layout_width="250dp"
         android:layout_height="22dp"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="72dp"
+        android:layout_marginStart="72dp"
         android:layout_marginTop="339dp"
         android:fontFamily="@font/poppins"
         android:gravity="center_horizontal|top"
         android:text="User Login"
         android:textAlignment="center"
-        android:textFontWeight="400"
-        android:textSize="20dp"
+        android:textSize="20sp"
         />
 
     <EditText
         android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/field"
         android:layout_below="@id/LoginText"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
         android:layout_marginTop="390dp"
+        android:layout_marginRight="35dp"
+        android:background="@drawable/field"
+        android:drawableStart="@drawable/ic_baseline_person_outline_24"
+        android:drawablePadding="20dp"
         android:hint="Username"
-        android:textColorHint="@color/pastel_red"
-        android:textSize="16sp"
+        android:minHeight="48dp"
         android:padding="10dp"
-        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
-        android:drawablePadding="20dp" />
+        android:textColorHint="@color/pastel_red"
+        android:textSize="16sp" />
 
     <EditText
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/field"
         android:layout_below="@id/username"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
         android:layout_marginTop="450dp"
+        android:layout_marginRight="35dp"
+        android:background="@drawable/field"
+        android:drawableStart="@drawable/ic_baseline_password_24"
+        android:drawablePadding="20dp"
         android:hint="Password"
-        android:textColorHint="@color/pastel_red"
-        android:textSize="16sp"
+        android:inputType="textPassword"
+        android:minHeight="48dp"
         android:padding="10dp"
-        android:drawableLeft="@drawable/ic_baseline_password_24"
-        android:drawablePadding="20dp" />
+        android:textColorHint="@color/pastel_red"
+        android:textSize="16sp" />
 
+    <Button
+        android:id="@+id/LoginButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/password"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="Login"
+        android:textSize="14sp"
+        app:backgroundTint="#DF8892" />
 
+    <Button
+        android:id="@+id/forgotPasswordButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="35dp"
+        android:layout_below="@id/password"
+        android:layout_marginTop="7dp"
+        android:fontFamily="@font/poppins"
+        android:text="Forgot Password"
+        android:background="#00000000"
+        android:textSize="12sp"
+        />
 
-
-
-
+    <Button
+        android:id="@+id/registerButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="220dp"
+        android:layout_below="@id/password"
+        android:layout_marginTop="7dp"
+        android:fontFamily="@font/poppins"
+        android:text="Register Account"
+        android:background="#00000000"
+        android:textSize="12sp"
+        />
 
 </RelativeLayout>
