--- a/app/src/main/res/layout/fragment_login_page.xml
+++ b/app/src/main/res/layout/fragment_login_page.xml
@@ -14,7 +14,7 @@
         android:id="@+id/LoginTitle"
         android:layout_width="247dp"
         android:layout_height="67dp"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="72dp"
         android:layout_marginLeft="35dp"
@@ -26,7 +26,6 @@
         android:gravity="center_horizontal|top"
         android:text="Bit by Bit"
         android:textAlignment="center"
-        android:textFontWeight="400"
         android:textSize="56sp" />
 
     <TextView
