--- a/app/src/main/res/layout/fragment_login_page.xml
+++ b/app/src/main/res/layout/fragment_login_page.xml
@@ -95,7 +95,7 @@
         app:backgroundTint="#DF8892" />
 
     <Button
-        android:id="@+id/forgotPasswordButton"
+        android:id="@+id/forgotPasswordPageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="35dp"
@@ -108,7 +108,7 @@
         />
 
     <Button
-        android:id="@+id/registerButton"
+        android:id="@+id/registerPageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="220dp"
