--- a/app/src/main/res/layout/fragment_login_page.xml
+++ b/app/src/main/res/layout/fragment_login_page.xml
@@ -17,11 +17,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="72dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
         android:layout_marginTop="265dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="50dp"
         android:fontFamily="@font/poppins_semibold"
         android:gravity="center_horizontal|top"
         android:text="Bit by Bit"
@@ -68,9 +64,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/username"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_marginLeft="35dp"
-        android:layout_marginTop="450dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="35dp"
         android:background="@drawable/field"
         android:drawableStart="@drawable/ic_baseline_password_24"
@@ -88,7 +83,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/password"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="50dp"
         android:fontFamily="@font/poppins_semibold"
         android:text="Login"
         android:textSize="14sp"
@@ -100,10 +95,11 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="35dp"
         android:layout_below="@id/password"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="14dp"
         android:fontFamily="@font/poppins"
         android:text="Forgot Password"
         android:background="#00000000"
+        android:textColor="@color/white"
         android:textSize="12sp"
         />
 
@@ -113,11 +109,12 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="220dp"
         android:layout_below="@id/password"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="14dp"
         android:fontFamily="@font/poppins"
         android:text="Register Account"
         android:background="#00000000"
         android:textSize="12sp"
+        android:textColor="@color/white"
         />
 
 </RelativeLayout>
