--- a/app/src/main/res/layout/fragment_profile_page.xml
+++ b/app/src/main/res/layout/fragment_profile_page.xml
@@ -8,7 +8,7 @@
 
 
     <TextView
-        android:id="@+id/registerTitle"
+        android:id="@+id/profileTitle"
         android:layout_width="247dp"
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
@@ -33,9 +33,9 @@
         app:civ_border_color="#FF000000"
         app:civ_border_width="1dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_below="@id/profileTitle"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="-25dp"
         />
 
     <Button
@@ -44,9 +44,9 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_marginStart="240dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="-25dp"
+        android:layout_below="@id/profileTitle"
         android:backgroundTint="@color/white"
         android:fontFamily="@font/poppins_semibold"
         android:text="Edit Profile"
@@ -75,9 +75,9 @@
         android:layout_width="247dp"
         android:layout_height="40dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_below="@id/profileImage"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="35dp"
         android:layout_marginBottom="50dp"
@@ -92,18 +92,17 @@
         android:id="@+id/userBio"
         android:layout_width="247dp"
         android:layout_height="40dp"
-        android:layout_below="@id/name"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_below="@id/name"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="280dp"
+        android:layout_marginTop="-50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="35dp"
         android:layout_marginBottom="50dp"
         android:fontFamily="@font/poppins"
         android:gravity="left"
         android:text="@string/app_name"
-        android:textSize="20sp"
+        android:textSize="18sp"
         />
     <!--        at line 104, change @string/app_name to user_bio -->
 
@@ -116,6 +115,7 @@
         android:backgroundTint="@color/pastel_red"
         android:fontFamily="@font/poppins_semibold"
         android:text="VIEW ACHIEVEMENTS"
+        android:layout_marginTop="-20dp"
         android:textSize="14sp"
         />
 
