--- a/app/src/main/res/layout/fragment_admin_post_page.xml
+++ b/app/src/main/res/layout/fragment_admin_post_page.xml
@@ -1,14 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".adminPostPage">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/postTitle"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="149dp"
+        android:layout_marginTop="49dp"
+        android:layout_marginEnd="50dp"
+        android:textAlignment="center"
+        android:layout_marginBottom="50dp"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="Post"
+        android:textSize="20dp"
+        android:textColor="@color/black"
+        />
 
-</FrameLayout>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profileImage"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:src="@color/pastel_red"
+        app:civ_border_color="#FF000000"
+        app:civ_border_width="1dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/postTitle"
+        android:layout_marginStart="260dp"
+        android:layout_marginTop="-25dp"
+        />
+
+    <EditText
+        android:id="@+id/postTitleName"
+        android:layout_width="216dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="162dp"
+        android:layout_marginRight="30dp"
+        android:drawablePadding="20dp"
+        android:hint="Title"
+        android:minHeight="48dp"
+        android:padding="10dp"
+        android:textColorHint="@color/black"
+        android:textSize="16sp" />
+
+    <EditText
+        android:id="@+id/postDescription"
+        android:layout_width="374dp"
+        android:layout_height="101dp"
+        android:layout_below="@id/postTitleName"
+        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/rectangleLarge"
+        android:fontFamily="@font/poppins_semibold"
+        android:hint="Post Description"
+        android:paddingLeft="20dp"
+        android:textSize="14dp" />
+
+    <Button
+        android:id="@+id/publishPostButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="265dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="50dp"
+        android:backgroundTint="@color/white"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="Publish"
+        android:textColor="@color/pastel_red"
+        android:textSize="14sp" />
+
+    <Button
+        android:id="@+id/returnToProfilePageButton"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="50dp"
+        android:backgroundTint="@color/white"
+        android:drawableLeft="@drawable/ic_baseline_black_arrow_back_24"
+        android:fontFamily="@font/poppins_semibold"
+        android:textColor="@color/pastel_red"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/selectCategoryText"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/postDescription"        android:layout_centerHorizontal="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="-20dp"
+        android:layout_marginBottom="50dp"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="Select Category"
+        android:textColor="@color/black"
+
+        android:textSize="16dp"
+        />
+
+    <Button
+        android:id="@+id/categoryButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/postDescription"
+        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="241dp"
+        android:layout_marginTop="-30dp"
+        android:layout_marginEnd="50dp"
+        android:backgroundTint="@color/white"
+        android:drawableEnd="@drawable/ic_baseline_pastelred_arrow_forward_ios_24"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="Select"
+        android:textColor="@color/pastel_red"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/uploadPicturesText"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/selectCategoryText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="-20dp"
+        android:layout_marginBottom="50dp"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="Upload Pictures (optional)"
+        android:textColor="@color/black"
+
+        android:textSize="16dp"
+        />
+
+    <Button
+        android:id="@+id/choosePictureButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/uploadPicturesText"
+        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="-50dp"
+        android:layout_marginEnd="50dp"
+        android:backgroundTint="@color/white"
+        android:drawableEnd="@drawable/ic_baseline_pastelred_arrow_forward_ios_24"
+        android:fontFamily="@font/poppins_semibold"
+        android:text="Select"
+        android:textColor="@color/pastel_red"
+        android:textSize="14sp" />
+
+</RelativeLayout>
