--- a/app/src/main/res/layout/fragment_profile_page.xml
+++ b/app/src/main/res/layout/fragment_profile_page.xml
@@ -70,6 +70,21 @@
         android:textSize="14sp"
         />
 
+    <Button
+        android:id="@+id/adminPostPageButton"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="259dp"
+        android:layout_marginTop="50dp"
+        android:backgroundTint="@color/white"
+        android:drawableLeft="@drawable/ic_baseline_post_add_24"
+        android:fontFamily="@font/poppins_semibold"
+        android:textAlignment="center"
+        android:textSize="14sp" />
+
     <TextView
         android:id="@+id/name"
         android:layout_width="247dp"
@@ -111,10 +126,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/userBio"
-        android:layout_centerHorizontal="true"
+        android:gravity="left"
+        android:layout_marginLeft="30dp"
         android:backgroundTint="@color/pastel_red"
         android:fontFamily="@font/poppins_semibold"
-        android:text="VIEW ACHIEVEMENTS"
+        android:text="ACHIEVEMENTS"
         android:layout_marginTop="-20dp"
         android:textSize="14sp"
         />
