--- a/app/src/main/res/layout/fragment_admin_post_page.xml
+++ b/app/src/main/res/layout/fragment_admin_post_page.xml
@@ -24,18 +24,18 @@
         />
 
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profileImage"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:src="@color/pastel_red"
-        app:civ_border_color="#FF000000"
-        app:civ_border_width="1dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/postTitle"
-        android:layout_marginStart="260dp"
-        android:layout_marginTop="-25dp"
-        />
+<!--    <de.hdodenhof.circleimageview.CircleImageView-->
+<!--        android:id="@+id/profileImage"-->
+<!--        android:layout_width="96dp"-->
+<!--        android:layout_height="96dp"-->
+<!--        android:src="@color/pastel_red"-->
+<!--        app:civ_border_color="#FF000000"-->
+<!--        app:civ_border_width="1dp"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_below="@id/postTitle"-->
+<!--        android:layout_marginStart="260dp"-->
+<!--        android:layout_marginTop="-25dp"-->
+<!--        />-->
 
     <EditText
         android:id="@+id/postTitleName"
@@ -64,7 +64,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="50dp"
-        android:background="@drawable/rectangleLarge"
+        android:background="@drawable/rectangle"
         android:fontFamily="@font/poppins_semibold"
         android:hint="Post Description"
         android:paddingLeft="20dp"
