--- a/app/src/main/res/layout/fragment_register_page.xml
+++ b/app/src/main/res/layout/fragment_register_page.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/registerPageBG"
+    android:background="@drawable/register_page_bg"
     tools:context=".registerPage">
 
     <TextView
