--- a/app/src/main/res/layout/fragment_login_page.xml
+++ b/app/src/main/res/layout/fragment_login_page.xml
@@ -50,9 +50,8 @@
         android:layout_marginTop="390dp"
         android:layout_marginRight="35dp"
         android:background="@drawable/field"
-        android:drawableStart="@drawable/ic_baseline_person_outline_24"
+        android:drawableRight="@drawable/ic_baseline_person_outline_24"
         android:drawablePadding="20dp"
-        android:hint="Username"
         android:minHeight="48dp"
         android:padding="10dp"
         android:textColorHint="@color/pastel_red"
@@ -68,9 +67,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginRight="35dp"
         android:background="@drawable/field"
-        android:drawableStart="@drawable/ic_baseline_password_24"
+        android:drawableRight="@drawable/ic_baseline_password_24"
         android:drawablePadding="20dp"
-        android:hint="Password"
         android:inputType="textPassword"
         android:minHeight="48dp"
         android:padding="10dp"
