--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -11,7 +11,7 @@
         android:label="fragment_onboarding"
         tools:layout="@layout/fragment_onboarding" >
         <action
-            android:id="@+id/action_onboardingPage_to_loginPage"
+            android:id="@+id/onBoard_to_login"
             app:destination="@id/loginPage" />
     </fragment>
     <fragment
